# bf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang_format.sh  driver.c  exec.sh  main.cpp  mandel_profile.txt  performance.txt
bfcheck/: bfcheck.pl  bfcheck.pl~
bftest/: bfcheck.pl  prog-0000.b  prog-0001.b  prog-0002.b  prog-0003.b  prog-0004.b  prog-0005.b  prog-0006.b  prog-0007.b  prog-0008.b  prog-0009.b  prog-0010.b  prog-0011.b  prog-0012.b  prog-0013.b  prog-0014.b  prog-0015.b  prog-0016.b  prog-0017.b  prog-0018.b  prog-0019.b  prog-0020.b  prog-0021.b  prog-0022.b  prog-0023.b  prog-0024.b  prog-0025.b  prog-0026.b  prog-0027.b  prog-0028.b  prog-0029.b  prog-0030.b  prog-0031.b  prog-0032.b  prog-0033.b  prog-0034.b  prog-0035.b  prog-0036.b  prog-0037.b  prog-0038.b  (+11 more)
include/: compiler.hpp  global.hpp  profiler.hpp  util.hpp
perf/: bench.txt  bottles.txt  deadcodetest.txt  hanoi.txt  hello.txt  long.txt  loopremove.txt  mandel.txt  serptri.txt  twinkle.txt
scan/: gen_scan.pl  scan000.b  scan001.b  scan002.b  scan003.b  scan004.b  scan005.b  scan006.b  scan007.b  scan008.b  scan009.b  scan010.b  scan011.b  scan012.b  scan013.b  scan014.b  scan015.b  scan016.b  scan017.b  scan018.b  scan019.b  scan020.b  scan021.b  scan022.b  scan023.b  scan024.b  scan025.b  scan026.b  scan027.b  scan028.b  scan029.b  scan030.b  scan031.b  scan032.b  scan033.b  scan034.b  scan035.b  scan036.b  scan037.b  scan038.b  (+261 more)
scripts/: exec.sh  perf.sh
src/: compiler.cpp  profiler.cpp  util.cpp
